--- a/Tesis/Views/AdminMainPage.xaml
+++ b/Tesis/Views/AdminMainPage.xaml
@@ -53,20 +53,18 @@
                 HorizontalTextAlignment="Center"
                    Margin="0,10,0,20" />
 
-                <!-- Botones de Acción -->
-                <StackLayout Orientation="Horizontal" Spacing="20" HorizontalOptions="Center">
-                    <Button Text="Ver Usuarios" BackgroundColor="#4682B4" TextColor="White" WidthRequest="150"/>
-                    <Button Text="Ver Estadísticas" BackgroundColor="#4682B4" TextColor="White" WidthRequest="150"/>
-                </StackLayout>
-
-                <!-- Mensaje Final -->
-                <StackLayout BackgroundColor="#FFFFFF" Padding="20" Spacing="10">
-                    <Label Text="Recuerda revisar los Usuarios Nuevos y mantener todo en orden. ¡Tu equipo confía en ti!"
+            <StackLayout Orientation="Horizontal" Spacing="20" HorizontalOptions="Center">
+                <Button Text="Ver Usuarios" BackgroundColor="#4682B4" TextColor="White" WidthRequest="150"
+                Clicked="OnVerUsuariosClicked"/>
+            </StackLayout>
+            <!-- Mensaje Final -->
+            <StackLayout BackgroundColor="#FFFFFF" Padding="20" Spacing="10">
+                <Label Text="Recuerda revisar los Usuarios Nuevos y mantener todo en orden. ¡Tu equipo confía en ti!"
                        FontSize="16"
                        FontAttributes="Italic"
                        TextColor="#363636" 
                         HorizontalTextAlignment="Center" />
-                </StackLayout>
+            </StackLayout>
         </StackLayout>
     </ScrollView>
     <!-- Cierre del ScrollView -->
